# ChromaDetect-wasm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-demo.yml  js-ci.yml  release.yml  rust-ci.yml  test.yml
demo/: README.md  app.js  expected-results.json  index.html  package-lock.json  package.json  run-video-tests.js  site.webmanifest  styles.css  test-runner.html  utils.js  vite.config.js
js/: .npmignore  AGENTS.md  README.npm.md  package-lock.json  package.json  vite.config.ts
js/src/: image-processor.test.ts  image-processor.ts  index.test.ts  index.ts  types.ts  video-processor.test.ts  video-processor.ts
js/wasm/: chroma_detect.d.ts  chroma_detect.js  chroma_detect_bg.wasm  chroma_detect_bg.wasm.d.ts  package.json
rust/: Cargo.toml
rust/src/: clustering.rs  color.rs  detection.rs  histogram.rs  lib.rs  video.rs
rust/tests/: detection_tests.rs
scripts/: build.sh
